@@ -1,66 +1,60 @@
 package com.vena.ecom.dto.response;
 
 import com.vena.ecom.model.User;
+import com.vena.ecom.model.enums.UserRole;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class UserResponse {
     private String userId;
-    private String name;
+    private String firstname;
+    private String lastname;
     private String email;
-    private String role;
+    private UserRole role;
     private List<AddressResponse> addresses;
-
-    public UserResponse() {
-    }
 
     public UserResponse(User user) {
         this.userId = user.getId();
-        this.name = user.getFirstName() + " " + user.getLastName();
+        this.firstname = user.getFirstName();
+        this.lastname = user.getLastName();
         this.email = user.getEmail();
-        this.role = user.getRole().toString();
-        this.addresses = user.getAddressList().stream()
-                .map(AddressResponse::new)
-                .toList();
+        this.role = user.getRole();
+
+
+        if (user.getAddressList() != null) {
+            this.addresses = user.getAddressList()
+                    .stream()
+                    .map(AddressResponse::new)
+                    .collect(Collectors.toList());
+        } else {
+            this.addresses = Collections.emptyList();
+        }
     }
+
 
     public String getUserId() {
         return userId;
     }
 
-    public void setUserId(String userId) {
-        this.userId = userId;
+    public String getFirstname() {
+        return firstname;
     }
 
-    public String getName() {
-        return name;
-    }
-
-    public void setName(String name) {
-        this.name = name;
+    public String getLastname() {
+        return lastname;
     }
 
     public String getEmail() {
         return email;
     }
 
-    public void setEmail(String email) {
-        this.email = email;
-    }
-
-    public String getRole() {
+    public UserRole getRole() {
         return role;
-    }
-
-    public void setRole(String role) {
-        this.role = role;
     }
 
     public List<AddressResponse> getAddresses() {
         return addresses;
-    }
-
-    public void setAddresses(List<AddressResponse> addresses) {
-        this.addresses = addresses;
     }
 }
